--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
 
   <body>
+    <h1>How to use Git for the project</h1>
+    <p>The following links will provide you with guides (pictures and video) on how to use Git for OODP or any other projects basically</p>
+    <ul>
+      <li>How to clone a repository</li>
+      <li>How to commit a file</li>
+      <li>How to update local repo with new code from GitHub</li>
+      <li>How to push to GitHub</li>
+    </ul>
     <video src="media/Pull from Repo.mp4" type="video/mp4">Your browser does not support video files</video>
   </body>
 </html>
