Added a new template to handle stuff in

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>How to Git for Dummies (NTU SCSE Style)</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
@@ -12,10 +13,17 @@
     <p>The following links will provide you with guides (pictures and video) on how to use Git for OODP or any other projects basically</p>
     <ul>
       <li>How to clone a repository</li>
+      <li>How to import cloned git Repo into IDE<ul>
+          <li>IntelliJ IDEA</li>
+          <li>Eclipse</li>
+        </ul></li>
       <li>How to commit a file</li>
-      <li>How to update local repo with new code from GitHub</li>
+      <li>How to update local repo with new code from GitHub (pull)</li>
       <li>How to push to GitHub</li>
+      <li><b>IMPORTANT</b> How to create a feature </li>
+      <li>Resolve Merge Conflicts</li>
+      <li><i>Optional</i> Amend unpushed commits</li>
+      <li><i>Optional</i> View CI Builds</li>
     </ul>
-    <video src="media/Pull from Repo.mp4" type="video/mp4">Your browser does not support video files</video>
   </body>
 </html>
