Update to add all of the different links

--- a/guides/commit.html
+++ b/guides/commit.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Template - How to Git for Dummies (NTU SCSE Style)</title>
+    <title>Commit Code - How to Git for Dummies (NTU SCSE Style)</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
   </head>
 
   <body>
     <h1>Template</h1>
-    <button id="rtnbtn" type="button">Return</button>
     <p>Brief Description</p>
     
     <div><b>Demo Video</b><br>
