--- a/guides/pr.html
+++ b/guides/pr.html
@@ -4,14 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Template - How to Git for Dummies (NTU SCSE Style)</title>
+    <title>Create PR and do Features - How to Git for Dummies (NTU SCSE Style)</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
   </head>
 
   <body>
     <h1>Template</h1>
-    <button id="rtnbtn" type="button">Return</button>
     <p>Brief Description</p>
+    <b>Note: Basically most of the features should follow this flow 
+      (everything on a Pull Request). This way it will allow us to do our own 
+      stuff simultaneously effectively</b>
     
     <div><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
