--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
     <h1>How to use Git for the project</h1>
     <p>The following links will provide you with guides (pictures and video) on how to use Git for OODP or any other projects basically</p>
     <ul>
-      <li>How to clone a repository</li>
+      <li><a href="/guides/clone.html">How to clone a repository</a></li>
       <li>How to import cloned git Repo into IDE<ul>
-          <li>IntelliJ IDEA</li>
-          <li>Eclipse</li>
+          <li><a href="/guides/import-intellij.html">IntelliJ IDEA</a></li>
+          <li><a href="/guides/import-eclipse.html">Eclipse</a></li>
         </ul></li>
-      <li>How to commit a file</li>
-      <li>How to update local repo with new code from GitHub (pull)</li>
-      <li>How to push to GitHub</li>
-      <li><b>IMPORTANT</b> How to create a feature </li>
-      <li>Resolve Merge Conflicts</li>
-      <li><i>Optional</i> Amend unpushed commits</li>
-      <li><i>Optional</i> View CI Builds</li>
+      <li><a href="/guides/commit.html">How to commit a file</a></li>
+      <li><a href="/guides/pull.html">How to update local repo with new code from GitHub (pull)</a></li>
+      <li><a href="/guides/push.html">How to push to GitHub</a></li>
+      <li><a href="/guides/pr.html"><b>IMPORTANT</b> How to create a feature</a></li>
+      <li><a href="/guides/conflict.html">Resolve Merge Conflicts</a></li>
+      <li><a href="/guides/rebase.html">Resolve Merge Conflicts</a></li>
+      <li><a href="/guides/amend.html"><i>Optional</i> Amend unpushed commits</a></li>
+      <li><a href="/guides/buildserver.html"><i>Optional</i> View CI Builds</a></li>
     </ul>
   </body>
 </html>
