--- a/guides/template.html
+++ b/guides/template.html
@@ -10,7 +10,7 @@
 
   <body>
     <h1>Template</h1>
-    <button id="rtnbtn" type="button">Return</button>
+    <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
     <p>Brief Description</p>
     
     <div><b>Demo Video</b><br>
