--- a/guides/pr.html
+++ b/guides/pr.html
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-    <h1>Template</h1>
+    <h1>Issue Pull Request (PR) for features</h1>
+    <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
     <p>Brief Description</p>
     <b>Note: Basically most of the features should follow this flow 
       (everything on a Pull Request). This way it will allow us to do our own 
