--- a/guides/pull.html
+++ b/guides/pull.html
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-    <h1>Template</h1>
+    <h1>Update Local Project files from GitHub (git pull)</h1>
+    <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
     <p>Brief Description</p>
     
     <div><b>Demo Video</b><br>
