Update some classes and video references

--- a/guides/clone.html
+++ b/guides/clone.html
@@ -11,10 +11,14 @@
   <body>
     <h1>Clone Repository (git clone)</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-    <p>Brief Description</p>
+    <p id="description">Brief Description</p>
+
+    <ol>
+      <li>Go to the GitHub Repository and click on <i>Clone or download</i></li>
+    </ol>
     
     <div><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
-    <video controls src="../media/Pull from Repo.mp4" type="video/mp4">Your browser does not support video files</video>
+    <video controls src="../media/Git Clone Repository.mp4" type="video/mp4">Your browser does not support video files</video>
   </body>
 </html>
