--- a/guides/pr.html
+++ b/guides/pr.html
@@ -11,13 +11,13 @@
   <body>
     <h1>Issue Pull Request (PR) for features</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-    <p>Brief Description</p>
+    <p id="description">Brief Description</p>
     <b>Note: Basically most of the features should follow this flow 
       (everything on a Pull Request). This way it will allow us to do our own 
       stuff simultaneously effectively</b>
     
     <div><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
-    <video controls src="../media/Pull from Repo.mp4" type="video/mp4">Your browser does not support video files</video>
+    <video controls src="../media/How to PR.mp4" type="video/mp4">Your browser does not support video files</video>
   </body>
 </html>
