--- a/guides/template.html
+++ b/guides/template.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Template</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-    <p>Brief Description</p>
+    <p id="description">Brief Description</p>
     
     <div><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
