Finished clone.html

--- a/guides/clone.html
+++ b/guides/clone.html
@@ -15,6 +15,14 @@
 
     <ol>
       <li>Go to the GitHub Repository and click on <i>Clone or download</i></li>
+      <li>Copy the URL by clicking on the button on the right of the URL</li>
+      <img class="image" src="../media/clone-1.jpg"/>
+      <li>Go to SourceTree and press the + button at the tab list, then press <i>Clone</i></li>
+      <img class="image" src="../media/clone-2.jpg"/>
+      <li>Paste the URL onto the <i>Source Path/URL</i> field and wait for it to finish loading. Then press <i>Clone</i>
+      <br><i>Optionally, define the directory where you want your project files to be located at</i></li>
+      <img class="image" src="../media/clone-3.jpg"/>
+      <li>Wait for it to finish loading and you are done!</li>
     </ol>
     
     <div><b>Demo Video</b><br>
