Added the rest of the media files and added the image tags into the respective guide html doc

--- a/guides/buildserver.html
+++ b/guides/buildserver.html
@@ -12,6 +12,9 @@
     <h1>View Builds on Travis CI</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
     <p id="description">Brief Description</p>
+
+    <img class="image" src="../media/travis-1.jpg"/>
+    <img class="image" src="../media/travis-2.jpg"/>
     
     <div><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
