--- a/guides/pr.html
+++ b/guides/pr.html
@@ -15,6 +15,13 @@
     <b>Note: Basically most of the features should follow this flow 
       (everything on a Pull Request). This way it will allow us to do our own 
       stuff simultaneously effectively</b>
+
+      <img class="image" src="../media/pr-1.jpg"/>
+      <img class="image" src="../media/pr-2.jpg"/>
+      <img class="image" src="../media/pr-3.jpg"/>
+      <img class="image" src="../media/pr-4.jpg"/>
+      <img class="image" src="../media/pr-5.jpg"/>
+      <img class="image" src="../media/pr-6.jpg"/>
     
     <div><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
