--- a/guides/conflict.html
+++ b/guides/conflict.html
@@ -12,6 +12,12 @@
     <h1>Resolve Conflicts in Code</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
     <p id="description">Brief Description</p>
+
+    <img class="image" src="../media/conflict-1.jpg"/>
+    <img class="image" src="../media/conflict-2.jpg"/>
+    <img class="image" src="../media/conflict-3.jpg"/>
+    <img class="image" src="../media/conflict-4.jpg"/>
+    <img class="image" src="../media/conflict-5.jpg"/>
     
     <div><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
