--- a/guides/import-eclipse.html
+++ b/guides/import-eclipse.html
@@ -12,6 +12,13 @@
     <h1>Import Project into Eclipse</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
     <p id="description">Brief Description</p>
+
+    <img class="image" src="../media/eclipse-1.jpg"/>
+    <img class="image" src="../media/eclipse-2.jpg"/>
+    <img class="image" src="../media/eclipse-3.jpg"/>
+    <img class="image" src="../media/eclipse-4.jpg"/>
+    <img class="image" src="../media/eclipse-5.jpg"/>
+    <img class="image" src="../media/eclipse-6.jpg"/>
     
     <div><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
