--- a/guides/pull.html
+++ b/guides/pull.html
@@ -12,6 +12,9 @@
     <h1>Update Local Project files from GitHub (git pull)</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
     <p id="description">Brief Description</p>
+
+    <img class="image" src="../media/pull-1.jpg"/>
+    <img class="image" src="../media/pull-2.jpg"/>
     
     <div><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
