Added more IDs so that I can CSS the whole thing up

--- a/guides/import-eclipse.html
+++ b/guides/import-eclipse.html
@@ -20,7 +20,7 @@
     <img class="image" src="../media/eclipse-5.jpg"/>
     <img class="image" src="../media/eclipse-6.jpg"/>
     
-    <div><b>Demo Video</b><br>
+    <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video controls src="../media/Import to Eclipse.mp4" type="video/mp4">Your browser does not support video files</video>
   </body>
