--- a/guides/template.html
+++ b/guides/template.html
@@ -13,7 +13,7 @@
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
     <p id="description">Brief Description</p>
     
-    <div><b>Demo Video</b><br>
+    <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video controls src="../media/Pull from Repo.mp4" type="video/mp4">Your browser does not support video files</video>
   </body>
