Added description to clone and updated IntelliJ Import Guide

--- a/guides/clone.html
+++ b/guides/clone.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Clone Repository (git clone)</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-    <p id="description">Brief Description</p>
+    <p id="description">The following steps teaches you how to clone a GitHub Repository onto your local machine</p>
 
     <ol>
       <li>Go to the GitHub Repository and click on <i>Clone or download</i></li>
@@ -20,7 +20,7 @@
       <li>Go to SourceTree and press the + button at the tab list, then press <i>Clone</i></li>
       <img class="image" src="../media/clone-2.jpg"/>
       <li>Paste the URL onto the <i>Source Path/URL</i> field and wait for it to finish loading. Then press <i>Clone</i>
-      <br><i>Optionally, define the directory where you want your project files to be located at</i></li>
+      <br><i>Optionally, define the directory where you want your project files to be located at (yellow arrow)</i></li>
       <img class="image" src="../media/clone-3.jpg"/>
       <li>Wait for it to finish loading and you are done!</li>
     </ol>
