--- a/guides/import-intellij.html
+++ b/guides/import-intellij.html
@@ -11,13 +11,23 @@
   <body>
     <h1>Import Project into IntelliJ IDEA</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-    <p id="description">Brief Description</p>
+    <p id="description">The following guide shows you how to import the cloned repository into JetBrains IntelliJ IDEA IDE<br>
+    <i>Note that this guide only applies to Gradle projects. Other projects may have different steps</i></p>
 
-    <img class="image" src="../media/intellij-1.jpg"/>
-    <img class="image" src="../media/intellij-2.jpg"/>
-    <img class="image" src="../media/intellij-3.jpg"/>
-    <img class="image" src="../media/intellij-4.jpg"/>
-    <img class="image" src="../media/intellij-5.jpg"/>
+    <ol>
+      <li>Launch IntelliJ IDEA IDE and wait for it to load</li>
+      <li>Click the Import button <i>If you do not see the screen in the picture below, ensure that you have closed all project windows with File &gt; Close Project</i></li>
+      <img class="image" src="../media/intellij-1.jpg"/>
+      <li>Navigate to the project directory and select the <i>build.gradle</i> file before clicking OK</li>
+      <img class="image" src="../media/intellij-2.jpg"/>
+      <li>Ensure that <i>Use default gradle wrapper</i> is selected and click OK</li>
+      <img class="image" src="../media/intellij-3.jpg"/>
+      <li>Wait for IntelliJ to finish building the project</li>
+      <li>The source files are located at <i>src &gt; main &gt; java</i></li>
+      <img class="image" src="../media/intellij-4.jpg"/>
+      <li>To run the project, right click the main source file and select <i>Run</i></li>
+      <img class="image" src="../media/intellij-5.jpg"/>
+    </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
