--- a/guides/import-eclipse.html
+++ b/guides/import-eclipse.html
@@ -11,14 +11,25 @@
   <body>
     <h1>Import Project into Eclipse</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-    <p id="description">Brief Description</p>
+    <p id="description">The following guide shows you how to import the cloned repository into Eclipse IDE<br>
+      <i>Note that this guide only applies to Gradle projects. Other projects may have different steps</i></p>
 
-    <img class="image" src="../media/eclipse-1.jpg"/>
-    <img class="image" src="../media/eclipse-2.jpg"/>
-    <img class="image" src="../media/eclipse-3.jpg"/>
-    <img class="image" src="../media/eclipse-4.jpg"/>
-    <img class="image" src="../media/eclipse-5.jpg"/>
-    <img class="image" src="../media/eclipse-6.jpg"/>
+    <ol>
+        <li>Launch Eclipse and wait for it to load <i>(Setup the workspace and close the Welcome screen if it pops up)</i></li>
+        <li>Click on <i>File &gt; Import</i></li>
+        <img class="image" src="../media/eclipse-1.jpg"/>
+        <li>Select <i>Gradle &gt; Existing Gradle Project</i> and click Next</li>
+        <img class="image" src="../media/eclipse-2.jpg"/>
+        <li>Enter the root path of the project directory and press Next</li>
+        <img class="image" src="../media/eclipse-3.jpg"/>
+        <li>Continue spamming Next until you cannot do so, then click Finish</li>
+        <img class="image" src="../media/eclipse-4.jpg"/>
+        <li>Note: If you receive this error as shown in the picture below, ignore it and press <i>OK</i></li>
+        <img class="image" src="../media/eclipse-5.jpg"/>
+        <li>The source files can be found in <i>src/main/java</i></li>
+        <img class="image" src="../media/eclipse-6.jpg"/>
+        <li>To run the program just press the Green Play button in the Toolbar as per normal</li>
+    </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
