Update index to remove repeated text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <li><a href="/guides/push.html">How to push to GitHub</a></li>
       <li><a href="/guides/pr.html"><b>IMPORTANT</b> How to create a feature</a></li>
       <li><a href="/guides/conflict.html">Resolve Merge Conflicts</a></li>
-      <li><a href="/guides/rebase.html">Resolve Merge Conflicts</a></li>
+      <li><a href="/guides/rebase.html">Rebase Branch against another branch</a></li>
       <li><a href="/guides/amend.html"><i>Optional</i> Amend unpushed commits</a></li>
       <li><a href="/guides/buildserver.html"><i>Optional</i> View CI Builds</a></li>
     </ul>
