Finished setting up the Guides

--- a/guides/commit.html
+++ b/guides/commit.html
@@ -11,10 +11,18 @@
   <body>
     <h1>Add Commits (git commit)</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-    <p id="description">Brief Description</p>
+    <p id="description">The following guide shows you how to "save" your work by committing it into your local repository</p>
 
-    <img class="image" src="../media/commit-1.jpg"/>
-    <img class="image" src="../media/commit-2.jpg"/>
+    <ol>
+      <li>Select the files you wish to commit and click <i>Stage Selected</i><br>
+      (Alternatively you can select <i>Stage All</i> to select all files)</li>
+      <img class="image" src="../media/commit-1.jpg"/>
+      <li>The files you have selected should show up in the <i>Staged Files</i> section</li>
+      <li>Enter a meaningful commit message to describe what you are committing</li>
+      <li><i>Optional: Check the "Push" checkbox if you wish to push the commits to GitHub immediately after you commit</i></li>
+      <li>When you are done, click the commit button to commit the code</li>
+      <img class="image" src="../media/commit-2.jpg"/>
+    </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
