--- a/guides/pull.html
+++ b/guides/pull.html
@@ -11,10 +11,18 @@
   <body>
     <h1>Update Local Project files from GitHub (git pull)</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-    <p id="description">Brief Description</p>
+    <p id="description">The following guide shows you how to update your local repository with the latest changes from GitHub</p>
 
-    <img class="image" src="../media/pull-1.jpg"/>
-    <img class="image" src="../media/pull-2.jpg"/>
+    <ol>
+      <li>Click the <i>Fetch</i> button to ensure that all changes are fetched</li>
+      <li>Ensure that you are at the correct branch you wish to pull changes from</li>
+      <li>Click the <i>Pull</i> Button</li>
+      <img class="image" src="../media/pull-1.jpg"/>
+      <li>Double check that the remote and local branches match<br>
+      <i>(If it doesnt match, select the correct remote branch with the dropdown box)</i></li>
+      <li>Press OK to confirm and pull new changes</li>
+      <img class="image" src="../media/pull-2.jpg"/>
+    </ol>    
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
