--- a/guides/push.html
+++ b/guides/push.html
@@ -11,10 +11,16 @@
   <body>
     <h1>Push changes made to GitHub (git push)</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-    <p id="description">Brief Description</p>
+    <p id="description">The following guide shows you how to push your updated code to GitHub</p>
 
-    <img class="image" src="../media/push-1.jpg"/>
-    <img class="image" src="../media/push-2.jpg"/>
+    <ol>
+      <li>Do all the commits you want (See <a href="commit.html">Add Commits</a>)</li>
+      <li>Click the <i>Push</i> button</li>
+      <img class="image" src="../media/push-1.jpg"/>
+      <li>Make sure all branches you wish to push are selected and checked</li>
+      <li>Click the <i>Push</i> button</li>
+      <img class="image" src="../media/push-2.jpg"/>
+    </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
