--- a/guides/amend.html
+++ b/guides/amend.html
@@ -11,10 +11,18 @@
   <body>
     <h1>Amend Commits (git amend)</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-    <p id="description">Brief Description</p>
+    <p id="description">This guide briefly shows you how you can amend any unpushed commits. It is useful if you forgot a single line and do not want to have a new commit for it. Console usage is required<br>
+    <i>Note: This will only work for the latest commit, other commits will require advanced git use</i></p>
 
-    <img class="image" src="../media/amend-1.jpg"/>
-    <img class="image" src="../media/amend-2.jpg"/>
+    <ol>
+      <li>Stage all file changes you wish to add to the commit by selecting them and clicking either <i>Stage All</i> or <i>Stage Selected</i></li>
+      <li>Select the <i>Terminal</i> button</li>
+      <img class="image" src="../media/amend-1.jpg"/>
+      <li>Execute the following command <i>git commit --amend</i></li>
+      <li>Update your commit message and save and exit it (In the nano app as shown in the picture below, its Ctrl+O and Ctrl+W)</li>
+      <img class="image" src="../media/amend-2.jpg"/>
+      <li>You are done!</li>
+    </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
