--- a/guides/buildserver.html
+++ b/guides/buildserver.html
@@ -11,10 +11,17 @@
   <body>
     <h1>View Builds on Travis CI</h1>
     <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-    <p id="description">Brief Description</p>
+    <p id="description">Ever wonder what all those checks the CI is doing when you are doing a PR (or any commits actually)?<br>
+    Or wonder why your build is failing for some reason? This will show you how to access the CI to view the logs</p>
 
-    <img class="image" src="../media/travis-1.jpg"/>
-    <img class="image" src="../media/travis-2.jpg"/>
+    <ol>
+      <li>Go too your PR (or commit) and click the <i>Details</i> link</li>
+      <img class="image" src="../media/travis-1.jpg"/>
+      <li>Click on the link for <i>the build</i> like shown in the picture below</li>
+      <img class="image" src="../media/travis-2.jpg"/>
+      <li>You can now view the logs as shown in the picture below</li>
+      <img class="image" src="../media/travis-3.jpg"/>
+    </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
