Testing VideoJS cause why not

--- a/guides/pull.html
+++ b/guides/pull.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Update Local Repo (Pull) - How to Git for Dummies (NTU SCSE Style)</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <link href="https://vjs.zencdn.net/7.4.1/video-js.css" rel="stylesheet">
   </head>
 
   <body>
@@ -26,6 +27,9 @@
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
-    <video preload="metadata" controls src="../media/Pull from Repo.mp4" type="video/mp4">Your browser does not support video files</video>
+    <video preload="metadata" controls src="../media/Pull from Repo.mp4" type="video/mp4"><p class="vjs-no-js">
+        To view this video please enable JavaScript, and consider upgrading to a web browser that
+        <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+      </p></video>
   </body>
 </html>
