--- a/guides/pull.html
+++ b/guides/pull.html
@@ -27,10 +27,9 @@
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
-    <video class="video-js" preload="metadata" controls src="../media/Pull from Repo.mp4" type="video/mp4"><p class="vjs-no-js">
+    <video preload="metadata" controls src="../media/Pull from Repo.mp4" type="video/mp4"><p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that
         <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
       </p></video>
-    <script src='https://vjs.zencdn.net/7.4.1/video.js'></script>
   </body>
 </html>
