Added more shit into the main menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <body>
     <h1>How to use Git for the project</h1>
-    <p>The following links will provide you with guides (pictures and video) on how to use Git for OODP or any other projects basically</p>
+    <p>The following links will provide you with guides (pictures and video) on how to use Git for OODP, MDP or any other projects basically<br>
+    <i>(Note: The sample project showcased here is a Gradle Java Project, but most of the instructions are generic and works with any languages with the exception of importing)</i></p>
     <ul>
       <li><a href="/guides/clone.html">How to clone a repository</a></li>
       <li>How to import cloned git Repo into IDE<ul>
@@ -26,5 +27,22 @@
       <li><a href="/guides/amend.html"><i>Optional</i> Amend unpushed commits</a></li>
       <li><a href="/guides/buildserver.html"><i>Optional</i> View CI Builds</a></li>
     </ul>
+
+    <h2>What's required for this</h2>
+    <ul>
+      <li>A GitHub Account (Create one at <a href="https://github.com">GitHub.com</a>)</li>
+      <li><a href="https://www.sourcetreeapp.com/">SourceTree Git GUI</a> (Requires an <a href="https://bitbucket.org/account/signup/">Atlassian Account</a> to register)</li>
+    </ul>
+
+    <h1>Q&A</h1>
+    <h2>Why git or GitHub?</h2>
+    <p>Being a Version Control System (VCS) and a VCS provider, this will aloow us to be able to collaborate on the same codebase simultaneously
+      with support for History (through the Commits system) and conflict resolution</p>
+    <h2>We need an account for SourceTree? Can I use something else?</h2>
+    <p>YES! However, this guide is catered to SourceTree but other Git GUI programs will have their own equivalent. Or you can always use git console	&#128527;</p>
+
+    <h1>Extra Guides</h1>
+    <p><a href="https://git-scm.com/book/en/v2">Git Holy Grail Book</a></p>
+    <p><a href="https://confluence.atlassian.com/get-started-with-sourcetree">Atlassian's Official "Get Started with SourceTree" Guide</a></p>
   </body>
 </html>
