--- a/guides/amend.html
+++ b/guides/amend.html
@@ -18,7 +18,7 @@
       <li>Stage all file changes you wish to add to the commit by selecting them and clicking either <i>Stage All</i> or <i>Stage Selected</i></li>
       <li>Select the <i>Terminal</i> button</li>
       <img class="image" src="../media/amend-1.jpg"/>
-      <li>Execute the following command <i>git commit --amend</i></li>
+      <li>Execute the following command <pre class="prettyprint">git commit --amend</pre></li>
       <li>Update your commit message and save and exit it (In the nano app as shown in the picture below, its Ctrl+O and Ctrl+W)</li>
       <img class="image" src="../media/amend-2.jpg"/>
       <li>You are done!</li>
@@ -27,5 +27,6 @@
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video preload="metadata" controls src="../media/How to amend commits.mp4" type="video/mp4">Your browser does not support video files</video>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   </body>
 </html>
