Added pretty printing for other console commands

--- a/guides/rebase.html
+++ b/guides/rebase.html
@@ -20,7 +20,7 @@
       <li>Ensure that your parent branch you are rebasing your current branch off is updated (See <a href="pull.html">Update branch</a>)</li>
       <li>Ensure that your branch is selected and click the <i>Terminal</i> button</li>
       <img class="image" src="../media/rebase-1.jpg"/>
-      <li>Execute the following command <i>git rebase "branch name"</i>, replacing "branch name" with the name of the branch you are rebasing from (in the case of the picture below, it is the master branch we are rebasing from)</li>
+      <li>Execute the following command <pre class="prettyprint">git rebase "branch name"</pre>, replacing "branch name" with the name of the branch you are rebasing from (in the case of the picture below, it is the master branch we are rebasing from)</li>
       <img class="image" src="../media/rebase-2.jpg"/>
       <li>If you have no merge conflicts you are done! Otherwise look at <a href="conflict.html">Resolving Merge Conflicts</a> to resolve any conflicted code</li>
     </ol>
@@ -28,5 +28,6 @@
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video preload="metadata" controls src="../media/Rebase Master.mp4" type="video/mp4">Your browser does not support video files</video>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   </body>
 </html>
