--- a/guides/conflict.html
+++ b/guides/conflict.html
@@ -27,7 +27,7 @@
       <img class="image" src="../media/conflict-4.jpg"/>
       <li>Tell git to continue the operation you are doing<br>
       If you are doing a pull, just go ahead and click <i>Commit</i> in File Status (see <a href="commit.html">Commit Code</a>)<br>
-      If you are doing a rebase, go back to the console and execute <i>git rebase --continue</i> (See pic below)</li>
+      If you are doing a rebase, go back to the console and execute <pre class="prettyprint">git rebase --continue</pre> (See pic below)</li>
       <img class="image" src="../media/conflict-5.jpg"/>
     </ol>
     
@@ -35,5 +35,6 @@
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video preload="metadata" controls src="../media/Rebase Conflict Resolution.mp4" type="video/mp4">Your browser does not support video files</video>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   </body>
 </html>
