--- a/guides/commit.html
+++ b/guides/commit.html
@@ -27,5 +27,12 @@
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video preload="metadata" controls src="../media/Commit a file.mp4" type="video/mp4">Your browser does not support video files</video>
+
+    <h2>Console Commands Used</h2>
+    <pre class="prettyprint">
+      git add [-A] "file name" # Add files to commit (-A if you wish to add all files)
+      git status # View Tracked Files
+      git commit -m "'Commit Message'" # Commits the file with a commit message</pre>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   </body>
 </html>
