--- a/guides/conflict.html
+++ b/guides/conflict.html
@@ -36,5 +36,12 @@
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video preload="metadata" controls src="../media/Rebase Conflict Resolution.mp4" type="video/mp4">Your browser does not support video files</video>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+
+    <h2>Console Commands Used</h2>
+    <pre class="prettyprint">
+      git rebase "branch" # Rebase the branch
+      git rebase --continue # Continues after resolving conflict
+    </pre>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   </body>
 </html>
