--- a/guides/pr.html
+++ b/guides/pr.html
@@ -42,5 +42,16 @@
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video preload="metadata" controls src="../media/How to PR.mp4" type="video/mp4">Your browser does not support video files</video>
+
+    <h2>Console Commands Used</h2>
+    <pre class="prettyprint">
+      git checkout -b "branchname" # Checkouts a new branch
+      git add [-A] "file" # Adds file to Commit
+      git commit -m "Message" # Commits messages
+      git push # Push commits to GitHub
+      git checkout master # Go back to master
+      git branch -d "branchname" # Deletes the branch
+    </pre>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   </body>
 </html>
