--- a/guides/pull.html
+++ b/guides/pull.html
@@ -27,5 +27,12 @@
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video preload="metadata" controls src="../media/Pull from Repo.mp4" type="video/mp4">Your browser does not support video files</video>
+
+    <h2>Console Commands Used</h2>
+    <pre class="prettyprint">
+      git fetch origin # Fetch changes from GitHub
+      git pull # Pulls changes from GitHub
+    </pre>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   </body>
 </html>
