--- a/guides/push.html
+++ b/guides/push.html
@@ -25,5 +25,15 @@
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video preload="metadata" controls src="../media/Push to Repo.mp4" type="video/mp4">Your browser does not support video files</video>
+
+    <h2>Console Commands Used</h2>
+    <pre class="prettyprint">
+      git add [-A] "file" # Adds files to commit
+      git commit -m "Message" # Commits
+      # -f forces the push and should only be done if all else fails
+      git push [-f] # Just push commits
+      git push [-f] origin "branch name" # Push a specific branch name (replace origin with your remote)
+    </pre>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   </body>
 </html>
