--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       with support for History (through the Commits system) and conflict resolution</p>
     <h2>We need an account for SourceTree? Can I use something else?</h2>
     <p>YES! However, this guide is catered to SourceTree but other Git GUI programs will have their own equivalent. Or you can always use git console	&#128527;</p>
+    <h2>I'm actually interested in the Console Command equivalents of the various tools! How do I find them?</h2>
+    <p>Scroll all the way down to the bottom of each page and I will add the console command equivalent beside it if available</p>
 
     <h1>Extra Guides</h1>
     <p><a href="https://git-scm.com/book/en/v2">Git Holy Grail Book</a></p>
