Updated index.html to provide some recommended IDEs

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     <ul>
       <li>A GitHub Account (Create one at <a href="https://github.com">GitHub.com</a>)</li>
       <li><a href="https://www.sourcetreeapp.com/">SourceTree Git GUI</a> (Requires an <a href="https://bitbucket.org/account/signup/">Atlassian Account</a> to register)</li>
+      <li>A Programming IDE<ul>
+        <li>Java: <a href="https://www.eclipse.org/downloads/">Eclipse</a>, <a href="https://www.jetbrains.com/idea/download/">IntelliJ Community/Ultimate</a> or <a href="https://spider.eng.auburn.edu/user-cgi/grasp/grasp.pl?;dl=download_jgrasp.html">jGrasp</a></li>
+        <li>Python: <a href="https://www.anaconda.com/">Anaconda</a>, <a href="https://www.jetbrains.com/pycharm/download/">PyCharm Community/Professional</a> or <a href="https://www.python.org/downloads/">Python IDLE</a></li>
+        <li>PHP: <a href="https://www.jetbrains.com/phpstorm/download/">PHPStorm</a> or any Notepad application</li>
+        <li>C#/C/C++: <a href="https://visualstudio.microsoft.com/downloads/">Visual Studio</a> or <a href="http://www.codeblocks.org/downloads">Code::Blocks</a></li>
+      </ul></li>
     </ul>
 
     <h1>Q&A</h1>
