--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <h1>Q&A</h1>
     <h2>Why git or GitHub?</h2>
-    <p>Being a Version Control System (VCS) and a VCS provider, this will aloow us to be able to collaborate on the same codebase simultaneously
+    <p>Being a Version Control System (VCS) and a VCS provider, this will allow us to be able to collaborate on the same codebase simultaneously
       with support for History (through the Commits system) and conflict resolution</p>
     <h2>We need an account for SourceTree? Can I use something else?</h2>
     <p>YES! However, this guide is catered to SourceTree but other Git GUI programs will have their own equivalent. Or you can always use git console	&#128527;</p>
