--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
     <h1>Q&A</h1>
     <h2>Why git or GitHub?</h2>
-    <p>Being a Version Control System (VCS) and a VCS provider, this will allow us to be able to collaborate on the same codebase simultaneously
+    <p>Being a Version Control System (VCS) and a VCS provider, this will aloow us to be able to collaborate on the same codebase simultaneously
       with support for History (through the Commits system) and conflict resolution</p>
     <h2>We need an account for SourceTree? Can I use something else?</h2>
-    <p>YES! However, this guide is catered to SourceTree but other Git GUI programs will have their own equivalent. Or you can always use git console	&#128527;</p>
+    <p>YES! However, this guide is catered to SourceTree but other Git GUI programs will have their own equivalent features. You just have to hunt for them. Or you can always use git console	&#128527;</p>
     <h2>I'm actually interested in the Console Command equivalents of the various tools! How do I find them?</h2>
-    <p>Scroll all the way down to the bottom of each page and I will add the console command equivalent beside it if available</p>
+    <p>Scroll all the way down to the bottom of each page and I will add the console command equivalent there if available</p>
 
     <h1>Extra Guides</h1>
     <p><a href="https://git-scm.com/book/en/v2">Git Holy Grail Book</a></p>
