--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
     <h2>Why do we need to work in branches and do a PR? Can't we just commit directly to Master?</h2>
     <p>The main reason for working in seperate branches is to allow us to be able to work on the codebase simultaneously without much conflicts (hopefully). It is also done to ensure that
       the master branch will always be compilable and bad code does not land there. This is why branch protection exists as well to prevent direct pushes
-      <div class="imgrow"><div class="imgcol"><b>Branch Protection in place</b><br>
-      <img class="image" src="media/branch-protect-2.jpg" /></div>
-      <div class="imgcol"><b>Sample Branch Protection Rule Configuration</b><br>
-      <img class="image" src="media/branch-protect-1.jpg" /></div></div>
+      <div class="imgrow">
+        <div class="imgcol"><b>Sample Branch Protection Rule Configuration</b><br>
+          <img class="image" src="media/branch-protect-1.jpg" /></div>
+        <div class="imgcol"><b>Branch Protection in place</b><br>
+          <img class="image" src="media/branch-protect-2.jpg" /></div>
+      </div>
 
     </p>
 
