Added Github and SourceTree pages

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <p>The following links will provide you with guides (pictures and video) on how to use Git for OODP, MDP or any other projects basically<br>
     <i>(Note: The sample project showcased here is a Gradle Java Project, but most of the instructions are generic and works with any languages with the exception of importing)</i></p>
     <ul>
+      <li><a href="/guides/github.html">Introduction to GitHub</a></li>
+      <li><a href="/guides/sourcetree.html">Introduction to SourceTree</a></li>
       <li><a href="/guides/clone.html">How to clone a repository</a></li>
       <li>How to import cloned git Repo into IDE<ul>
           <li><a href="/guides/import-intellij.html">IntelliJ IDEA</a></li>
