Fixed Quick Jump Link

--- a/guides/github.html
+++ b/guides/github.html
@@ -18,7 +18,7 @@
       <li><a href="#jump-mics">Main Interface and Code Screen</a></li>
       <li><a href="#jump-issue">Issue Screen</a></li>
       <li><a href="#jump-pr">Pull Request Screen</a></li>
-      <li><a href="#jump-proj">Project Screen</a></li>
+      <li><a href="#jump-project">Project Screen</a></li>
     </ul>
     
     <h2><a id="jump-mics"></a>Main Interface and Code Screen</h2>
