Added breadcrumbs to the guides (easy next/previous) buttons

--- a/guides/clone.html
+++ b/guides/clone.html
@@ -10,7 +10,12 @@
 
   <body>
     <h1>Clone Repository (git clone)</h1>
-    <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+        <div id="sidebar">
+      <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="../index.html">Next</a>
+    </div>
+
     <p id="description">The following steps teaches you how to clone a GitHub Repository onto your local machine</p>
 
     <ol>
