--- a/guides/import-intellij.html
+++ b/guides/import-intellij.html
@@ -10,7 +10,12 @@
 
   <body>
     <h1>Import Project into IntelliJ IDEA</h1>
-    <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+        <div id="sidebar">
+      <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="../index.html">Next</a>
+    </div>
+
     <p id="description">The following guide shows you how to import the cloned repository into JetBrains IntelliJ IDEA IDE<br>
     <i>Note that this guide only applies to Gradle projects. Other projects may have different steps</i></p>
 
