--- a/guides/pull.html
+++ b/guides/pull.html
@@ -10,7 +10,12 @@
 
   <body>
     <h1>Update Local Project files from GitHub (git pull)</h1>
-    <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+        <div id="sidebar">
+      <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="../index.html">Next</a>
+    </div>
+
     <p id="description">The following guide shows you how to update your local repository with the latest changes from GitHub</p>
 
     <ol>
