--- a/guides/amend.html
+++ b/guides/amend.html
@@ -10,7 +10,12 @@
 
   <body>
     <h1>Amend Commits (git amend)</h1>
-    <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+        <div id="sidebar">
+      <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="../index.html">Next</a>
+    </div>
+
     <p id="description">This guide briefly shows you how you can amend any unpushed commits. It is useful if you forgot a single line and do not want to have a new commit for it. Console usage is required<br>
     <i>Note: This will only work for the latest commit, other commits will require advanced git use</i></p>
 
