--- a/guides/buildserver.html
+++ b/guides/buildserver.html
@@ -10,7 +10,12 @@
 
   <body>
     <h1>View Builds on Travis CI</h1>
-    <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+        <div id="sidebar">
+      <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="../index.html">Next</a>
+    </div>
+
     <p id="description">Ever wonder what all those checks the CI is doing when you are doing a PR (or any commits actually)?<br>
     Or wonder why your build is failing for some reason? This will show you how to access the CI to view the logs</p>
 
