--- a/guides/commit.html
+++ b/guides/commit.html
@@ -10,7 +10,12 @@
 
   <body>
     <h1>Add Commits (git commit)</h1>
-    <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+        <div id="sidebar">
+      <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="../index.html">Next</a>
+    </div>
+
     <p id="description">The following guide shows you how to "save" your work by committing it into your local repository</p>
 
     <ol>
