--- a/guides/sourcetree.html
+++ b/guides/sourcetree.html
@@ -10,7 +10,12 @@
 
   <body>
     <h1>Introduction to SourceTree</h1>
-    <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+        <div id="sidebar">
+      <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="../index.html">Next</a>
+    </div>
+
     <p id="description">This page will give you a brief guide on the SourceTree User Interface. It is color coded to tell you what it's referring to</p>
     
     <h2>Main Interface</h2>
