--- a/guides/template.html
+++ b/guides/template.html
@@ -10,7 +10,12 @@
 
   <body>
     <h1>Template</h1>
-    <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+        <div id="sidebar">
+      <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
+      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="../index.html">Next</a>
+    </div>
+
     <p id="description">Brief Description</p>
     
     <div id="divvid"><b>Demo Video</b><br>
