Update breadcrumb links

--- a/guides/buildserver.html
+++ b/guides/buildserver.html
@@ -12,8 +12,7 @@
     <h1>View Builds on Travis CI</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="prebtn" href="amend.html">Amend Unpushed Commits</a>
     </div>
 
     <p id="description">Ever wonder what all those checks the CI is doing when you are doing a PR (or any commits actually)?<br>
