--- a/guides/clone.html
+++ b/guides/clone.html
@@ -12,8 +12,8 @@
     <h1>Clone Repository (git clone)</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="import-intellij.html">Import to IntelliJ IDEA IDE</a>
+      <a class="button" id="prebtn" href="sourcetree.html">Introduction to SourceTree</a>
     </div>
 
     <p id="description">The following steps teaches you how to clone a GitHub Repository onto your local machine</p>
