--- a/guides/conflict.html
+++ b/guides/conflict.html
@@ -12,8 +12,8 @@
     <h1>Resolve Conflicts in Code</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="rebase.html">Rebase Branch</a>
+      <a class="button" id="prebtn" href="pr.html">Create Feature Pull Requests</a>
     </div>
 
     <p id="description">The following guide shows you how to resolve conflicts if it happens (either through rebasing or pulling code). Console usage is required</p>
