--- a/guides/import-eclipse.html
+++ b/guides/import-eclipse.html
@@ -12,8 +12,8 @@
     <h1>Import Project into Eclipse</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="commit.html">Commit a File</a>
+      <a class="button" id="prebtn" href="import-intellij.html">Import to IntelliJ IDEA IDE</a>
     </div>
 
     <p id="description">The following guide shows you how to import the cloned repository into Eclipse IDE<br>
