--- a/guides/pull.html
+++ b/guides/pull.html
@@ -12,8 +12,8 @@
     <h1>Update Local Project files from GitHub (git pull)</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="push.html">Push to GitHub</a>
+      <a class="button" id="prebtn" href="commit.html">Commit a File</a>
     </div>
 
     <p id="description">The following guide shows you how to update your local repository with the latest changes from GitHub</p>
