--- a/guides/push.html
+++ b/guides/push.html
@@ -12,8 +12,8 @@
     <h1>Push changes made to GitHub (git push)</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="pr.html">Create Feature Pull Requests</a>
+      <a class="button" id="prebtn" href="pull.html">Update from GitHub (git pull)</a>
     </div>
 
     <p id="description">The following guide shows you how to push your updated code to GitHub</p>
