--- a/guides/amend.html
+++ b/guides/amend.html
@@ -10,10 +10,10 @@
 
   <body>
     <h1>Amend Commits (git amend)</h1>
-        <div id="sidebar">
+    <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
+      <a class="button" id="nxtbtn" href="buildserver.html">View CI Builds</a>
+      <a class="button" id="prebtn" href="rebase.html">Rebase Branch</a>
     </div>
 
     <p id="description">This guide briefly shows you how you can amend any unpushed commits. It is useful if you forgot a single line and do not want to have a new commit for it. Console usage is required<br>
