--- a/guides/commit.html
+++ b/guides/commit.html
@@ -12,8 +12,8 @@
     <h1>Add Commits (git commit)</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="pull.html">Update from GitHub (git pull)</a>
+      <a class="button" id="prebtn" href="import-eclipse.html">Import to Eclipse IDE</a>
     </div>
 
     <p id="description">The following guide shows you how to "save" your work by committing it into your local repository</p>
