--- a/guides/github.html
+++ b/guides/github.html
@@ -12,8 +12,7 @@
     <h1>Introduction to GitHub</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="sourcetree.html">Introduction to SourceTree</a>
     </div>
 
     <p id="description">This page will give you a brief guide on the <a href="https://github.com">GitHub.com</a> User Interface. It is color coded to tell you what it's referring to</p>
