--- a/guides/import-intellij.html
+++ b/guides/import-intellij.html
@@ -12,8 +12,8 @@
     <h1>Import Project into IntelliJ IDEA</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="import-eclipse.html">Import to Eclipse IDE</a>
+      <a class="button" id="prebtn" href="clone.html">Clone a Repository</a>
     </div>
 
     <p id="description">The following guide shows you how to import the cloned repository into JetBrains IntelliJ IDEA IDE<br>
