--- a/guides/pr.html
+++ b/guides/pr.html
@@ -12,8 +12,8 @@
     <h1>Issue Pull Request (PR) for features</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="conflict.html">Resolve Merge Conflicts</a>
+      <a class="button" id="prebtn" href="push.html">Push to GitHub</a>
     </div>
 
     <p id="description">This will show you how to do git-flow style of committing. Ideal git guidelines is that we never commit anything to master directly. So instead, we make use
