--- a/guides/rebase.html
+++ b/guides/rebase.html
@@ -12,8 +12,8 @@
     <h1>Update with latest changes to main branch (git rebase)</h1>
     <div id="sidebar">
       <a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a>
-      <a class="button" id="nxtbtn" href="../index.html">Next</a>
-      <a class="button" id="prebtn" href="../index.html">Previous</a>
+      <a class="button" id="nxtbtn" href="amend.html">Amend Unpushed Commits</a>
+      <a class="button" id="prebtn" href="conflict.html">Resolve Merge Conflicts</a>
     </div>
 
     <p id="description">The following guide shows you how to update your current branch with code from another branch that may have more commits since you have branched off it<br>
