Added a "Back to Top" button for quick scroll back to top

--- a/guides/sourcetree.html
+++ b/guides/sourcetree.html
@@ -51,5 +51,8 @@
       <li>Branches found on GitHub for you to checkout (download to local machine)</li>
       <li>Stashes found on your local machine (you can right click to apply stash to reapply the changes you made back to the repository)</li>
     </ol>
+
+    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <script src="../common.js" type="text/javascript"></script>
   </body>
 </html>
