--- a/index.html
+++ b/index.html
@@ -65,5 +65,8 @@
     <h1>Extra Guides</h1>
     <p><a href="https://git-scm.com/book/en/v2">Git Holy Grail Book</a></p>
     <p><a href="https://confluence.atlassian.com/get-started-with-sourcetree">Atlassian's Official "Get Started with SourceTree" Guide</a></p>
+
+    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <script src="common.js" type="text/javascript"></script>
   </body>
 </html>
