--- a/guides/amend.html
+++ b/guides/amend.html
@@ -36,5 +36,8 @@
     <h2>Console Commands Used</h2>
     <pre class="prettyprint">git commit --amend # Amends the commit</pre>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+    
+    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <script src="../common.js" type="text/javascript"></script>
   </body>
 </html>
