--- a/guides/conflict.html
+++ b/guides/conflict.html
@@ -48,5 +48,8 @@
       git rebase --continue # Continues after resolving conflict
     </pre>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+    
+    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <script src="../common.js" type="text/javascript"></script>
   </body>
 </html>
