--- a/guides/github.html
+++ b/guides/github.html
@@ -136,5 +136,8 @@
       <li>Add issue cards (or add issue to the specific board)</li>
       <li>Issue Cards</li>
     </ol>
+
+    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <script src="../common.js" type="text/javascript"></script>
   </body>
 </html>
