--- a/guides/pr.html
+++ b/guides/pr.html
@@ -61,5 +61,8 @@
       git branch -d "branchname" # Deletes the branch
     </pre>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+
+    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <script src="../common.js" type="text/javascript"></script>
   </body>
 </html>
