--- a/guides/pull.html
+++ b/guides/pull.html
@@ -39,5 +39,8 @@
       git pull # Pulls changes from GitHub
     </pre>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+
+    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <script src="../common.js" type="text/javascript"></script>
   </body>
 </html>
