--- a/guides/push.html
+++ b/guides/push.html
@@ -40,5 +40,8 @@
       git push [-f] origin "branch name" # Push a specific branch name (replace origin with your remote)
     </pre>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+
+    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <script src="../common.js" type="text/javascript"></script>
   </body>
 </html>
