--- a/guides/rebase.html
+++ b/guides/rebase.html
@@ -44,5 +44,8 @@
       git rebase "branch" # Rebase against the other branch
     </pre>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+
+    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <script src="../common.js" type="text/javascript"></script>
   </body>
 </html>
