--- a/guides/template.html
+++ b/guides/template.html
@@ -21,5 +21,8 @@
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
     <video preload="metadata" controls src="../media/Pull from Repo.mp4" type="video/mp4">Your browser does not support video files</video>
+
+    <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
+    <script src="../common.js" type="text/javascript"></script>
   </body>
 </html>
