--- a/guides/clone.html
+++ b/guides/clone.html
@@ -37,8 +37,8 @@
     <h2>Console Commands Used</h2>
     <pre class="prettyprint">git clone "URL to git repository" # Clones the repository</pre>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
-    
+
     <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
-    <script src="../common.js" type="text/javascript"></script>
+    <script src="../scripts/common.js" type="text/javascript"></script>
   </body>
 </html>
