--- a/guides/commit.html
+++ b/guides/commit.html
@@ -39,8 +39,8 @@
       git status # View Tracked Files
       git commit -m "'Commit Message'" # Commits the file with a commit message</pre>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
-    
+
     <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
-    <script src="../common.js" type="text/javascript"></script>
+    <script src="../scripts/common.js" type="text/javascript"></script>
   </body>
 </html>
