--- a/guides/github.html
+++ b/guides/github.html
@@ -138,6 +138,6 @@
     </ol>
 
     <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
-    <script src="../common.js" type="text/javascript"></script>
+    <script src="../scripts/common.js" type="text/javascript"></script>
   </body>
 </html>
