--- a/guides/pr.html
+++ b/guides/pr.html
@@ -63,6 +63,6 @@
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 
     <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
-    <script src="../common.js" type="text/javascript"></script>
+    <script src="../scripts/common.js" type="text/javascript"></script>
   </body>
 </html>
