--- a/guides/template.html
+++ b/guides/template.html
@@ -23,6 +23,6 @@
     <video preload="metadata" controls src="../media/Pull from Repo.mp4" type="video/mp4">Your browser does not support video files</video>
 
     <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
-    <script src="../common.js" type="text/javascript"></script>
+    <script src="../scripts/common.js" type="text/javascript"></script>
   </body>
 </html>
