--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
     <p><a href="https://confluence.atlassian.com/get-started-with-sourcetree">Atlassian's Official "Get Started with SourceTree" Guide</a></p>
 
     <button onclick="topFunction()" id="topBtn" title="Go to top">^<br>Back to<br>Top</button>
-    <script src="common.js" type="text/javascript"></script>
+    <script src="scripts/common.js" type="text/javascript"></script>
   </body>
 </html>
